--- a/exp/CPointyTranslator/CPointyTranslator/CPointyTranslator.csproj
+++ b/exp/CPointyTranslator/CPointyTranslator/CPointyTranslator.csproj
@@ -93,6 +93,10 @@
     <EmbeddedResource Include="Templates\main.c.txt" />
     <EmbeddedResource Include="Templates\unistring.c.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Templates\list.c.txt" />
+    <EmbeddedResource Include="Templates\mem.c.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
