--- a/exp/CPointyTranslator/CPointyTranslator/CPointyTranslator.csproj
+++ b/exp/CPointyTranslator/CPointyTranslator/CPointyTranslator.csproj
@@ -53,6 +53,7 @@
     <Compile Include="ParseTree\BooleanConstant.cs" />
     <Compile Include="ParseTree\ArrayIndex.cs" />
     <Compile Include="ParseTree\BreakStatement.cs" />
+    <Compile Include="ParseTree\Cast.cs" />
     <Compile Include="ParseTree\ConstructorDefinition.cs" />
     <Compile Include="ParseTree\ConstructorInvocation.cs" />
     <Compile Include="ParseTree\DotField.cs" />
@@ -76,6 +77,7 @@
     <Compile Include="ParseTree\StructDefinition.cs" />
     <Compile Include="ParseTree\SwitchStatement.cs" />
     <Compile Include="ParseTree\SystemMethodInvocation.cs" />
+    <Compile Include="ParseTree\SystemMethodPointer.cs" />
     <Compile Include="ParseTree\TernaryNode.cs" />
     <Compile Include="ParseTree\ThisConstant.cs" />
     <Compile Include="ParseTree\Variable.cs" />
@@ -96,6 +98,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Templates\list.c.txt" />
     <EmbeddedResource Include="Templates\mem.c.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Templates\system.c.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
