--- a/exp/csharp/CPointyTranslator/CPointyTranslator.csproj
+++ b/exp/csharp/CPointyTranslator/CPointyTranslator.csproj
@@ -102,6 +102,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Templates\system.c.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Templates\io.c.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
